# Personal_finance_accounting_system

./: Makefile  README.md  main.py  pyproject.toml
